--- a/RepoTools/MainWindow.xaml
+++ b/RepoTools/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:RepoTools"
         xmlns:userControls="clr-namespace:RepoTools.View.UserControls"
         mc:Ignorable="d"
-        Title="RepoTools" Height="550" Width="950" Background="White" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="RepoTools" Height="575" Width="950" Background="White" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.20*"/>
@@ -48,13 +48,13 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="icon1" Style="{StaticResource SidebarButton}" Grid.Column="0">
+                <Button x:Name="icon1" Style="{StaticResource SidebarButtonBottom}" Grid.Column="0">
                     <Image Source="\Icons\browser_32.png" Height="32" Width="32"/>
                 </Button>
-                <Button x:Name="icon2" Style="{StaticResource SidebarButton}" Grid.Column="1">
+                <Button x:Name="icon2" Style="{StaticResource SidebarButtonBottom}" Grid.Column="1">
                     <Image Source="\Icons\tutorial_32.png" Height="32" Width="32"/>
                 </Button>
-                <Button x:Name="icon3" Style="{StaticResource SidebarButton}" Grid.Column="2">
+                <Button x:Name="icon3" Style="{StaticResource SidebarButtonBottom}" Grid.Column="2">
                     <Image Source="\Icons\patch_32.png" Height="32" Width="32"/>
                 </Button>
             </Grid>
