--- a/RepoTools/View/UserControls/SvnCheckIn.xaml
+++ b/RepoTools/View/UserControls/SvnCheckIn.xaml
@@ -29,8 +29,8 @@
                 </StackPanel>
             </GroupBox>
 
-            <GroupBox Header="Umgebungen" Margin="0,10,0,0">
-                <StackPanel  Margin="10">
+            <GroupBox x:Name="gbEnvironments" Header="Umgebungen" Margin="0,10,0,0">
+                <StackPanel  Margin="0,17,0,17">
                     <CheckBox x:Name="cbxDcsEntw" Content="DCSENTW" />
                     <CheckBox x:Name="cbxDcsTest" Content="DCSTEST" />
                     <CheckBox x:Name="cbxDcsProd" Content="DCSPROD" />
@@ -45,20 +45,22 @@
         <StackPanel Grid.Column="1"  Margin="10" HorizontalAlignment="Center">
             <GroupBox Header="Informationen zum Paket">
                 <StackPanel  Margin="10">
-                    <Label x:Name="lblOrderId" Content="Auftragsnummer / INC:"/>
+                    <Label x:Name="lblOrderId" Content="Auftragsnummer / INC"/>
                     <TextBox x:Name="tbxOrderId"/>
+
+                    <CheckBox x:Name="cbxNoOrderId" Content="Kein Auftrag / INC vorhanden?" Margin="0,10,0,10" Checked="cbxNoOrderId_Checked" Unchecked="cbxNoOrderId_Unchecked" />
 
                     <Label x:Name="lblRemark" Content="Bemerkung" />
                     <TextBox x:Name="tbxRemark" Style="{StaticResource MultiLineTextBox}"/>
 
-                    <Label x:Name="lblSoftwareVersion" Content="Version der Software" Margin="0,35,0,0" />
+                    <Label x:Name="lblSoftwareVersion" Content="Version der Software (Optional)" Margin="0,10,0,0" />
                     <TextBox x:Name="tbxSoftwareVersion"/>
 
-                    <CheckBox x:Name="cbxAddToMail" Content="In E-Mail aufnehmen?" Margin="0,33,0,0" />
+                    <CheckBox x:Name="cbxAddToMail" Content="In E-Mail aufnehmen?" Margin="0,10,0,0" />
                 </StackPanel>
             </GroupBox>
 
-            <Button x:Name="btnSubmit" Content="CHECK IN" Margin="0,20,0,0" Style="{StaticResource SubmitButton}"/>
+            <Button x:Name="btnSubmit" Content="CHECK IN" Margin="0,20,0,0" Style="{StaticResource SubmitButton}" Click="btnSubmit_Click"/>
         </StackPanel>
 
 
