--- a/RepoTools/App.xaml
+++ b/RepoTools/App.xaml
@@ -9,6 +9,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml" />
                 <ResourceDictionary Source="Styles/TextBoxStyles.xaml" />
+                <ResourceDictionary Source="Styles/TextBlockStyles.xaml" />
                 <ResourceDictionary Source="Styles/LabelStyles.xaml" />
                 <ResourceDictionary Source="Styles/ComboBoxStyles.xaml" />
                 <ResourceDictionary Source="Styles/CheckBoxStyles.xaml" />
